# gram_grep

./: .gitignore  CMakeLists.txt  Makefile  README.md  args.cpp  args.hpp  colours.hpp  gg_error.hpp  gram_grep.rc  gram_grep.sln  gram_grep.vcxproj  gram_grep.vcxproj.filters  main.cpp  option.hpp  output.cpp  output.hpp  parser.cpp  parser.hpp  pch.h  resource.h  search.cpp  search.hpp  types.cpp  types.hpp  version.hpp
sample_configs/: blank_init.g  block.g  boost_format.g  c-grammar.g  calc.g  catch.g  comments.g  const_char.g  cpp.g  cpp_func.g  create_proc.g  create_type.g  decrypt.g  exec.g  exec_old.g  exec_with_return.g  filedialog.g  fmt_no_params.g  format.g  format_cs.g  func.g  func_with_body.g  function.g  function_cs.g  if.g  insert.g  line_count.g  list.g  member_func_with_body.g  merge.g  mingodad.g  msg.g  nosc.g  nvarchar.g  param_cs.g  parens.g  reference.g  rev.g  reverse.g  sc.g  (+16 more)
